@@ -1,3 +1,10 @@
+2009-05-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/39942
+	* config/i386/x86-64.h (ASM_OUTPUT_MAX_SKIP_ALIGN): Don't emit second
+	.p2align 3 if MAX_SKIP is smaller than 7.
+	* config/i386/linux.h (ASM_OUTPUT_MAX_SKIP_ALIGN): Likewise.
+
 2009-05-20  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/40204
